--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+e2fsprogs (1.44.1-2) unstable; urgency=medium
+
+  * Fix e2image handling of e2i files on big endian systems
+  * Add sanity checks for inodes containing xattr values to prevent
+    maliciously crafted file systems from causing crashes caused by
+    infinite recursion
+  * Fix e2fsck so that quota usage is adjusted when clearing orphaned
+    inodes
+  * Fix filefrag so that unknown flags returned by FIEMAP won't cause a
+    buffer overrun
+
+ -- Theodore Y. Ts'o <tytso@mit.edu>  Tue, 10 Apr 2018 11:04:36 -0400
+
 e2fsprogs (1.44.1-1) unstable; urgency=medium
 
   * New upstream release
