--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+e2fsprogs (1.44.3-1) unstable; urgency=medium
+
+  * New upstream release
+  * Include hashmap.h in the libext2fs2 package
+  * Update debian policy compliance to 4.1.5
+
+ -- Theodore Y. Ts'o <tytso@mit.edu>  Tue, 10 Jul 2018 01:23:17 -0400
+
 e2fsprogs (1.44.3~rc2-1) unstable; urgency=low
 
   * New upstream release
