--- a/debian/changelog
+++ b/debian/changelog
@@ -11,8 +11,8 @@ e2fsprogs (1.44.5-1) unstable; urgency=medium
     are correct
   * Fix a false warning that tune2fs will take long time to change
     a UUID if the metadata_csum feature is not enabled
-  * Fix mk_cmds so it works on a usrmerge system when e2fsprogs is built
-    on a non-usrmerge system (Closes: #914087)
+  * Fix mk_cmds so it works on a non-usrmerge system when e2fsprogs
+    is built on a usrmerge system (Closes: #914087)
   * E2fsck will avoid offering to set the inline_data feature flag
     unnecessarily
   * E4defrag will handle the case where it is running as root and it can't
