--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+e2fsprogs (1.45.1-3) unstable; urgency=medium
+
+  * Fix e2scrub_all cron failures (Closes: #9292870)
+
+ -- Theodore Y. Ts'o <tytso@mit.edu>  Mon, 20 May 2019 21:48:40 -0400
+
 e2fsprogs (1.45.1-2) unstable; urgency=medium
 
   * Avoid spurious e2scrub_all error messages spamming administrators from
