--- a/po/nl.po
+++ b/po/nl.po
@@ -2068,7 +2068,7 @@ msgstr ""
 msgid ""
 "@i %i block %b conflicts with critical metadata, skipping block checks.\n"
 msgstr ""
-"Blok %2$b van inode %1$i conflicteert met kritieke metadata; blokcontroles "
+"Blok %b van inode %i conflicteert met kritieke metadata; blokcontroles "
 "worden overgeslagen.\n"
 
 #. @-expanded: directory inode %i block %b should be at block %c.  
