--- a/po/cs.po
+++ b/po/cs.po
@@ -5,6 +5,9 @@
 # Petr Pisar <petr.pisar@atlas.cz>, 2008, 2009, 2010, 2011, 2012, 2013, 2014.
 # Petr Pisar <petr.pisar@atlas.cz>, 2016, 2017, 2018, 2019.
 #
+# %i, %b, %N in e2fsck/problem.c do not support positional ordering (%2$i).
+# But they can be freely reordered because those are extracted from a context,
+# not from separate positional arguments.
 #. The strings in e2fsck's problem.c can be very hard to translate,
 #. since the strings are expanded in two different ways.  First of all,
 #. there is an @-expansion, where strings like "@i" are expanded to
@@ -72,7 +75,7 @@ msgstr ""
 "Project-Id-Version: e2fsprogs 1.45.1\n"
 "Report-Msgid-Bugs-To: tytso@alum.mit.edu\n"
 "POT-Creation-Date: 2019-05-12 21:06-0400\n"
-"PO-Revision-Date: 2019-05-18 16:24+02:00\n"
+"PO-Revision-Date: 2019-07-14 22:11+02:00\n"
 "Last-Translator: Petr Pisar <petr.pisar@atlas.cz>\n"
 "Language-Team: Czech <translation-team-cs@lists.sourceforge.net>\n"
 "Language: cs\n"
@@ -1939,7 +1942,7 @@ msgstr ""
 #. @-expanded: inode %i extended attribute block %b passes checks, but checksum does not match block.  
 #: e2fsck/problem.c:1052
 msgid "@i %i @a @b %b passes checks, but checksum does not match @b.  "
-msgstr "Block %b rozšířeného atributu iuzlu %i projde kontrolami, ale kontrolní součet bloku neodpovídá. "
+msgstr "Blok %b rozšířeného atributu iuzlu %i projde kontrolami, ale kontrolní součet bloku neodpovídá. "
 
 # ??? WTF
 #. @-expanded: Interior extent node level %N of inode %i:\n
