--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+e2fsprogs (1.44.5-1+deb9u1) stretch; urgency=medium
+
+  * Fix e4defrag crashes on 32-bit architectures (Closes: #920767)
+
+ -- Theodore Y. Ts'o <tytso@mit.edu>  Fri, 02 Aug 2019 23:49:00 -0400
+
 e2fsprogs (1.44.5-1) unstable; urgency=medium
 
   * New upstream version
