--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+e2fsprogs (1.45.5-2~bpo10+1) buster-backports; urgency=medium
+
+  * Rebuild for buster-backports.
+
+ -- Theodore Y. Ts'o <tytso@mit.edu>  Sat, 25 Jan 2020 11:40:10 -0500
+
 e2fsprogs (1.45.5-2) unstable; urgency=medium
 
   * Fix com_err support on Hurd, which has POSIX E* error code starting at
