e2fsck: clarify overflow link count error message
When directory link count is set to overflow value (1) but during pass 4
we find out the exact link count would fit, we either silently fix this
(which is not great because e2fsck then reports the fs was modified but
output doesn't indicate why in any way), or we report that link count is
wrong and ask whether we should fix it (in case -n option was
specified). The second case is even more misleading because it suggests
non-trivial fs corruption which then gets silently fixed on the next
run. Similarly to how we fix up other non-problems, just create a new
error message for the case directory link count is not overflown anymore
and always report it to clarify what is going on.

Reviewed-by: Andreas Dilger <adilger@dilger.ca>
Signed-off-by: Jan Kara <jack@suse.cz>
Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/tests/f_many_subdirs/expect.1
+++ b/tests/f_many_subdirs/expect.1
@@ -17,6 +17,8 @@ Fix? yes
 
 Inode 32963 ref count is 65000, should be 2.  Fix? yes
 
+Directory inode 39601 ref count set to overflow but could be exact value 2.  Fix? yes
+
 Pass 5: Checking group summary information
 Block bitmap differences:  -73383
 Fix? yes
